<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutContenedor_fragmentopcioncompartirimagen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negroTransparente"
    android:elevation="6dp"
    tools:context=".View.Fragments.OpcionCompartirImagenFragment">


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewContenedorOpcionesCompartir_fragmentingresarnombredelacancha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="2dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <LinearLayout

                android:id="@+id/linearLayoutContenedorConQR_fragmentopcioncompartirimagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/qr" />

                <ImageView
                    android:id="@+id/imageViewButtonInformacionConQR_fragmentopcioncompartirimagen"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:src="@drawable/information" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compartir_con_codigo_qr"
                    android:textColor="@color/negro"
                    android:textSize="@dimen/_14ssp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/o"
                android:textColor="@color/negro"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/linearLayoutContendorSinQR_fragmentopcioncompartirimagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/disableqr" />


                <ImageView
                    android:id="@+id/imageViewButtonInformacionSinQR_fragmentopcioncompartirimagen"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:src="@drawable/information" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/compatir_con_codigo_sin_qr"
                    android:textSize="15sp" />

            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar_fragmentopcioncompartirimagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_130sdp"
        android:visibility="gone" />


</RelativeLayout>